--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --font-montserrat: "Montserrat", sans-serif;
 }
 
 @theme inline {
@@ -23,5 +24,11 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-montserrat);
+}
+
+.line {
+  width: 100%;
+  background: white;
+  height: 1px;
 }
